sdk_tests/tests/pbc_contract_codegen/fail/shortname_bad_not_leb128.stderr
error: custom attribute panicked
 --> tests/pbc_contract_codegen/fail/shortname_bad_not_leb128.rs:7:1
  |
7 | #[action(shortname = 0xFF)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid shortname, should be LEB128 encoded: "Shortname's last byte must not have continuation bit set"
